Fix instagram gaps, make component

--- a/assets/styles/layout/_sidebar.scss
+++ b/assets/styles/layout/_sidebar.scss
@@ -33,66 +33,4 @@
 
 .widget {
 	margin-bottom: $gutter;
-
-	&__instagram {
-		// .widget__instagram
-
-		&--title {
-			// .widget__instagram--title
-			width: 100%;
-			margin-bottom: $gutter;
-			@include label();
-			line-height: $base-line-height;
-			color: $color__black--light;
-
-			@include media(">=screen768") {
-				margin-top: $gutter;
-				margin-bottom: $gutter;
-			}
-
-			@include media(">=screen1440") {
-				margin-top: $gutter * 1.5;
-				margin-bottom: $gutter * 1.5;
-			}
-		}
-
-		@supports (display: grid) {
-			&--title {
-				// .widget__instagram--title
-				grid-column: span 4;
-				width: auto;
-			}
-		}
-	}
-}
-
-@supports (display: flex) {
-	#sb_instagram {
-
-		#sbi_images {
-			display: flex;
-			flex-flow: row wrap;
-			justify-content: space-between;
-			align-items: flex-start;
-		}
-
-		// 4 column layout on smash balloon
-		&.sbi_col_4 {
-			#sbi_images {
-				.sbi_item {
-					width: calc(25% - #{$small-spacing});
-					margin-bottom: $small-spacing !important;
-
-					@media (max-width: 640px) {
-						margin-bottom: $base-spacing !important;
-						width: calc(50% - #{$small-spacing});
-					}
-
-//					@media (max-width: 480px) {
-//						width: 100%;
-//					}
-				}
-			}
-		}
-	}
 }
